<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ClientActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/common_size_big"
        android:layout_marginStart="@dimen/common_size_default"
        android:layout_marginEnd="@dimen/common_size_default"
        android:contentDescription="@string/user_image_message"
        android:src="@drawable/foto_06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_default"
        android:layout_marginStart="@dimen/common_size_default"
        android:layout_marginEnd="@dimen/common_size_default"
        android:text="@string/name_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPhoto"/>

    <TextView
        android:id="@+id/tvCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_default"
        android:layout_marginStart="@dimen/common_size_min"
        android:layout_marginEnd="@dimen/common_size_min"
        android:text="@string/codigo_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"/>



    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_big"
        android:layout_marginStart="@dimen/common_size_default"
        android:layout_marginEnd="@dimen/common_size_big2"
        android:text="@string/phone_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCode" />

    <TextView
        android:id="@+id/tvPhone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_min"
        android:text="@string/phone_message2"
        app:layout_constraintStart_toStartOf="@+id/tvPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />


    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_big"
        android:text="@string/email_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/tvPhone2"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone2" />

    <TextView
        android:id="@+id/tvEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_min"
        android:text="@string/email_message2"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_big"
        android:text="@string/favoritos_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/tvEmail2"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail2" />

    <TextView
        android:id="@+id/tvFavorite2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_size_min"
        android:text="@string/favoritos_message"
        app:layout_constraintStart_toStartOf="@+id/tvFavorite"
        app:layout_constraintTop_toBottomOf="@+id/tvFavorite" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/common_size_big2"
        android:layout_marginHorizontal="@dimen/common_size_min"
        android:text="@string/llamar_cliente_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>